# suon

./: .gitignore  .taplo.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  build.rs  deny.toml  rust-toolchain.toml  rustfmt.toml  typos.toml
benches/: Cargo.toml
benches/benches/: suon_checksum.rs  suon_chunk.rs  suon_database.rs  suon_lua.rs  suon_macros.rs  suon_movement.rs  suon_network.rs  suon_position.rs  suon_protocol_client.rs  suon_protocol_server.rs  suon_serde.rs  suon_task.rs  suon_xtea.rs
benches/src/: lib.rs
crates/suon_adler32/: Cargo.toml
crates/suon_adler32/benches/: adler32.rs
crates/suon_adler32/src/: lib.rs
crates/suon_app/: Cargo.toml
crates/suon_app/benches/: app.rs
crates/suon_app/src/: lib.rs  plugin.rs  shutdown.rs  system.rs
crates/suon_benches/: Cargo.toml
crates/suon_benches/benches/: suon_checksum.rs  suon_chunk.rs  suon_database.rs  suon_lua.rs  suon_macros.rs  suon_movement.rs  suon_network.rs  suon_position.rs  suon_protocol.rs  suon_protocol_client.rs  suon_protocol_server.rs  suon_serde.rs  suon_task.rs  suon_xtea.rs
crates/suon_benches/src/: lib.rs
crates/suon_channel/: Cargo.toml
crates/suon_channel/benches/: channel.rs
crates/suon_channel/src/: buffer_pool.rs  lib.rs
crates/suon_checksum/: Cargo.toml  README.md
crates/suon_checksum/src/: adler32.rs  lib.rs
crates/suon_chunk/: Cargo.toml  README.md
crates/suon_chunk/src/: content.rs  floor_position_key.rs  lib.rs  loader.rs
crates/suon_chunk/src/chunks/: key.rs  mod.rs
crates/suon_chunk/src/content/: mod.rs
crates/suon_chunk/src/occupancy/: mod.rs  occupied.rs
crates/suon_chunk/src/terrain/: mod.rs  occupied.rs
crates/suon_crypto/: Cargo.toml  README.md
crates/suon_crypto/src/: lib.rs  sha1.rs
crates/suon_database/: Cargo.toml  README.md
crates/suon_database/src/: connection.rs  convert.rs  lib.rs  persistence.rs  plugin.rs  record.rs  settings.rs  snapshot.rs  system.rs  table.rs
crates/suon_lua/: Cargo.toml  README.md
crates/suon_lua/benches/: lua.rs
crates/suon_lua/src/: bindings.rs  callback.rs  commands.rs  config.rs  error.rs  lib.rs  lua_component.rs  plugin.rs  runtime.rs  script.rs  vm.rs  world_cell.rs
crates/suon_lua/src/api/: entity.rs  mod.rs  query.rs  world.rs
crates/suon_macros/: Cargo.toml  README.md
crates/suon_macros/src/: database_model.rs  debug_unreachable.rs  deref.rs  documented_toml.rs  lib.rs  lua_component.rs  lua_hook.rs  resource.rs  table.rs  task.rs
crates/suon_market/: Cargo.toml
crates/suon_market/settings/: DatabaseSettings.toml
crates/suon_market/src/: lib.rs
crates/suon_market/src/browse/: event.rs  events.rs  intent.rs  lifecycle.rs  mod.rs  packet.rs  scope.rs  session.rs  system.rs
crates/suon_market/src/history/: action.rs  entry.rs  mod.rs  system.rs
crates/suon_market/src/offer/: accept.rs  cancel.rs  create.rs  event.rs  events.rs  intent.rs  logic.rs  mod.rs  model.rs  system.rs  tables.rs
crates/suon_market/src/persistence/: database.rs  dirty.rs  flush.rs  mod.rs  orm.rs  settings.rs  sqlx.rs  startup.rs
crates/suon_market/src/protocol/: mod.rs  packet.rs
crates/suon_market/src/session/: actor.rs  component.rs  intent.rs  mod.rs  system.rs
crates/suon_movement/: Cargo.toml  README.md
crates/suon_movement/src/: lib.rs
crates/suon_movement/src/orientation/: mod.rs
crates/suon_movement/src/protocol/: mod.rs
crates/suon_movement/src/step/: direction.rs  mod.rs  path.rs  timer.rs
crates/suon_movement/src/teleport/: mod.rs
crates/suon_network/: Cargo.toml  README.md
crates/suon_network/benches/: connection.rs  primitives.rs  reader.rs  roundtrip.rs  writer.rs  xtea.rs
crates/suon_network/src/: connections.rs  error.rs  lib.rs  manager.rs  plugin.rs  pool.rs  settings.rs  settings_error.rs
crates/suon_network/src/connection/: handle.rs  id.rs  info.rs  manager.rs  mod.rs  stats.rs
crates/suon_network/src/protocol/: command.rs  mod.rs  reader.rs  writer.rs
crates/suon_network/src/server/: binder.rs  kind.rs  mod.rs  runner.rs  settings.rs  shutdown.rs  throttle.rs
crates/suon_network/tests/: integration.rs
crates/suon_observability/: Cargo.toml  README.md
crates/suon_observability/src/: lib.rs
crates/suon_position/: Cargo.toml  README.md
crates/suon_position/src/: direction.rs  floor.rs  lib.rs  position.rs  previous_floor.rs  previous_position.rs
crates/suon_protocol/: Cargo.toml  README.md
crates/suon_protocol/src/: lib.rs
crates/suon_protocol/src/packets/: decoder.rs  encoder.rs  mod.rs
crates/suon_protocol_client/: Cargo.toml  README.md
crates/suon_protocol_client/src/: lib.rs
crates/suon_protocol_client/src/client/: accept_market_offer.rs  accept_trade.rs  browse_market.rs  cancel_market_offer.rs  cancel_steps.rs  change_shared_party_experience.rs  close_trade.rs  create_buddy.rs  create_market_offer.rs  delete_buddy.rs  face.rs  inspect_trade.rs  invite_to_party.rs  join_party.rs  keep_alive.rs  leave_market.rs  leave_party.rs  logout.rs  mod.rs  movement.rs  (+7 more)
crates/suon_protocol_server/: Cargo.toml  README.md
crates/suon_protocol_server/src/: lib.rs
crates/suon_resource/: Cargo.toml
crates/suon_resource/benches/: resource.rs
crates/suon_resource/src/: lib.rs
crates/suon_rng/: Cargo.toml  README.md
crates/suon_rng/src/: distribution.rs  fast_random.rs  lib.rs  random.rs  seed.rs  settings.rs
crates/suon_rsa/: Cargo.toml
crates/suon_rsa/benches/: rsa.rs
crates/suon_rsa/src/: lib.rs
crates/suon_serde/: Cargo.toml  README.md
crates/suon_serde/src/: documented.rs  duration.rs  lib.rs
crates/suon_session/: Cargo.toml
crates/suon_session/src/: component.rs  lib.rs
crates/suon_task/: Cargo.toml  README.md
crates/suon_task/src/: lib.rs
crates/suon_uuid/: Cargo.toml  README.md
crates/suon_uuid/src/: lib.rs
crates/suon_vitals/: Cargo.toml  README.md
crates/suon_vitals/src/: lib.rs
crates/suon_xtea/: Cargo.toml  README.md
crates/suon_xtea/benches/: xtea.rs
crates/suon_xtea/src/: decrypt.rs  encrypt.rs  expand_key.rs  lib.rs
(+323 files in other folders)
