# Package
[package]
# Crates.io entry point for the workspace.
name = "suon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Project links shown on crates.io and docs.rs.
homepage = "https://github.com/suonengine/suon"
documentation = "https://docs.rs/suon"

# Short crates.io summary describing what the package is.
description = "An MMORPG server framework in Rust"
readme = "README.md"

# Discovery metadata used by crates.io search and category pages.
keywords = ["mmorpg", "server", "bevy", "game", "ecs"]
categories = ["game-development", "network-programming"]

[package.metadata.cargo-udeps.ignore]
# Re-exported in `prelude` — udeps cannot detect glob re-exports as usage.
normal = ["suon_database", "suon_macros"]

[build-dependencies]
winresource = "0.1"

[dependencies]
# External crates used directly by the root umbrella crate.
anyhow.workspace = true
bevy.workspace = true
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["parse", "display", "serde"] }

# Internal Suon crates re-exported or composed by the root crate.
suon_checksum.workspace = true
suon_database.workspace = true
suon_macros.workspace = true
suon_movement.workspace = true
suon_network.workspace = true
suon_observability.workspace = true
suon_protocol.workspace = true
suon_protocol_client.workspace = true
suon_protocol_server.workspace = true
suon_serde.workspace = true
suon_task.workspace = true
suon_chunk.workspace = true
suon_position.workspace = true
suon_xtea.workspace = true
suon_lua.workspace = true

# Workspace
[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
# Shared package metadata inherited by workspace crates where applicable.
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
authors = ["Ramon Bernardo <ramonbernardo.contato@gmail.com>"]
repository = "https://github.com/suonengine/suon"
homepage = "https://github.com/suonengine/suon"
documentation = "https://docs.rs/suon"

[workspace.lints.rust]
# Baseline lint policy shared across the workspace.
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_attributes = "warn"

[workspace.dependencies]
# Shared third-party dependencies.
anyhow = { version = "1.0", default-features = false }
bevy = { version = "0.18", default-features = false, features = [
  "multi_threaded",
  "sysinfo_plugin",
  "bevy_log",
  "async_executor",
] }
bytes = { version = "1.11", default-features = false }
criterion = "0.8"
crossbeam-channel = { version = "0.5", default-features = false }
enumflags2 = { version = "0.7", default-features = false }
humantime = { version = "2.3", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
mlua = { version = "0.11", default-features = false }
serde_json = { version = "1.0", default-features = false }
smol = { version = "2.0", default-features = false }
smol-timeout = { version = "0.6", default-features = false }
syn = { version = "2.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.52", default-features = false }
toml = { version = "1.1", default-features = false }

# Shared internal crates.
# Keep `version` alongside `path` so the workspace is closer to crates.io publishing.
suon_checksum = { version = "0.1.0", path = "crates/suon_checksum" }
suon_database = { version = "0.1.0", path = "crates/suon_database" }
suon_macros = { version = "0.1.0", path = "crates/suon_macros" }
suon_movement = { version = "0.1.0", path = "crates/suon_movement" }
suon_network = { version = "0.1.0", path = "crates/suon_network" }
suon_observability = { version = "0.1.0", path = "crates/suon_observability" }
suon_protocol = { version = "0.1.0", path = "crates/suon_protocol" }
suon_protocol_client = { version = "0.1.0", path = "crates/suon_protocol_client" }
suon_protocol_server = { version = "0.1.0", path = "crates/suon_protocol_server" }
suon_serde = { version = "0.1.0", path = "crates/suon_serde" }
suon_task = { version = "0.1.0", path = "crates/suon_task" }
suon_chunk = { version = "0.1.0", path = "crates/suon_chunk" }
suon_position = { version = "0.1.0", path = "crates/suon_position" }
suon_xtea = { version = "0.1.0", path = "crates/suon_xtea" }
suon_lua = { version = "0.1.0", path = "crates/suon_lua" }

[profile.dev]
# Light optimization keeps debug builds responsive without being fully unoptimized.
opt-level = 1

[profile.dev.package."*"]
# Dependencies stay heavily optimized so the runtime is still usable in development.
opt-level = 3

[profile.release]
# Optimize for release binaries and benchmark-style runtime performance.
opt-level = 3
# Favor better whole-program optimization over faster release builds.
codegen-units = 1
# Run link-time optimization across crate boundaries.
lto = "fat"
# Abort on panic to reduce binary size and unwind overhead in release artifacts.
panic = "abort"
# Strip symbols from release artifacts to keep distribution size small.
strip = true
# Disable debug info and incremental compilation in release mode.
debug = false
incremental = false
