# Unstable Cargo features used by this workspace
cargo-features = ["trim-paths"]

# Package
[package]
# Crates.io entry point for the workspace
name = "suon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Project links shown on crates.io and docs.rs
homepage = "https://github.com/suonengine/suon"
documentation = "https://docs.rs/suon"

# Short crates.io summary describing what the package is
description = "An MMORPG server in Rust and Lua"
readme = "README.md"
exclude = ["benches/**"]

# Discovery metadata used by crates.io search and category pages
keywords = ["mmorpg", "server", "game", "lua"]
categories = ["game-development", "network-programming"]

[build-dependencies]
winresource = "0.1"

[dependencies]

[[bin]]
name = "suon"
path = "src/main.rs"
bench = false

# Workspace
[workspace]
resolver = "2"
members = ["crates/*", "tools/*"]

[workspace.package]
# Shared package metadata inherited by workspace crates where applicable
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
authors = ["Ramon Bernardo <ramonbernardo.contato@gmail.com>"]
repository = "https://github.com/suonengine/suon"
homepage = "https://github.com/suonengine/suon"
documentation = "https://docs.rs/suon"

[workspace.dependencies]
# Shared third-party dependencies
num-bigint-dig = { version = "0.9.1", default-features = false }
criterion = { version = "0.8.2", default-features = false }
serde_json = { version = "1.0.150", default-features = false }
crossbeam-channel = "0.5.15"
syn = { version = "2.0.117", default-features = false }
quote = "1.0.45"
proc-macro2 = "1.0.106"
# Shared internal crates.
# Keep `version` alongside `path` so the workspace is closer to crates.io publishing
suon_rsa = { version = "0.1.0", path = "crates/suon_rsa" }
suon_xtea = { version = "0.1.0", path = "crates/suon_xtea" }
suon_resource = { version = "0.1.0", path = "crates/suon_resource" }
suon_macros = { version = "0.1.0", path = "crates/suon_macros" }
suon_channel = { version = "0.1.0", path = "crates/suon_channel" }

[profile.dev]
# Light optimization keeps debug builds responsive without being fully unoptimized
opt-level = 1

[profile.dev.package."*"]
# Dependencies stay heavily optimized so the runtime is still usable in development
opt-level = 3

[profile.release]
# Optimize for release binaries and benchmark-style runtime performance
opt-level = 3
# Favor better whole-program optimization over faster release builds
codegen-units = 1
# Run link-time optimization across crate boundaries
lto = "fat"
# Abort on panic to reduce binary size and unwind overhead in release artifacts
panic = "abort"
# Strip symbols from release artifacts to keep distribution size small
strip = true
# Disable debug info and incremental compilation in release mode
debug = false
incremental = false
# Remove absolute source paths embedded by rustc (panic messages, debug info)
# Keeps binaries reproducible and avoids leaking developer machine paths
trim-paths = "all"

[workspace.lints.rust]
# Baseline lint policy shared across the workspace
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_attributes = "warn"

[workspace.lints.clippy]
# Prefer explicit panic context over bare unwraps
unwrap_used = "warn"
