# Package
[package]
# Benchmark suite for all Suon MMORPG framework crates.
name = "benches"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
bench = false

[dependencies]
# External crates used by the benchmarks.
bevy = { workspace = true, features = [
  "multi_threaded",
  "sysinfo_plugin",
  "bevy_log",
  "async_executor",
] }
bytes.workspace = true
criterion.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
syn = { workspace = true, features = [
  "derive",
  "parsing",
  "printing",
  "proc-macro",
] }

# Internal Suon crates under benchmark.
suon_checksum.workspace = true
suon_chunk.workspace = true
suon_database.workspace = true
suon_lua.workspace = true
suon_macros.workspace = true
suon_movement.workspace = true
suon_network.workspace = true
suon_position.workspace = true
suon_protocol.workspace = true
suon_protocol_client.workspace = true
suon_protocol_server.workspace = true
suon_serde.workspace = true
suon_task.workspace = true
suon_xtea.workspace = true

[[bench]]
name = "suon_checksum"
harness = false

[[bench]]
name = "suon_chunk"
harness = false

[[bench]]
name = "suon_database"
harness = false

[[bench]]
name = "suon_lua"
harness = false

[[bench]]
name = "suon_macros"
harness = false

[[bench]]
name = "suon_movement"
harness = false

[[bench]]
name = "suon_network"
harness = false

[[bench]]
name = "suon_position"
harness = false

[[bench]]
name = "suon_protocol_client"
harness = false

[[bench]]
name = "suon_protocol_server"
harness = false

[[bench]]
name = "suon_serde"
harness = false

[[bench]]
name = "suon_task"
harness = false

[[bench]]
name = "suon_xtea"
harness = false
