# Package
[package]
# Packet checksum utilities for the Suon MMORPG framework.
name = "suon_checksum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is.
description = "Packet checksum utilities for the Suon MMORPG framework"
