# Package
[package]
# Database abstraction layer for the Suon MMORPG framework.
name = "suon_database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is.
description = "Database abstraction layer for the Suon MMORPG framework"

[features]
default = []

[dependencies]
# External crates used directly by this crate.
anyhow.workspace = true
bevy = { workspace = true, features = [
  "multi_threaded",
  "sysinfo_plugin",
  "bevy_log",
  "async_executor",
] }
serde = { workspace = true, features = ["derive"] }
diesel = { workspace = true, features = ["sqlite", "postgres", "mysql"] }
toml = { workspace = true, features = ["parse", "display", "serde"] }
suon_serde.workspace = true

[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { workspace = true, features = ["bundled"] }
