# Package
[package]
# Lua scripting integration for the Suon MMORPG framework.
name = "suon_lua"
version.workspace = true
edition.workspace = true

# Minimum supported Rust version for this crate.
rust-version = "1.85"
authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is.
description = "Lua scripting integration for the Suon MMORPG framework"

[dependencies]
# External crates used directly by this crate.
bevy.workspace = true
mlua = { workspace = true, features = ["lua54", "vendored"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }

[dev-dependencies]
suon_macros.workspace = true
