[package]
name = "suon_macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Derive macro for suon_resource"

authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true
bench = false

[dependencies]
syn = { workspace = true, features = [
	"derive",
	"parsing",
	"printing",
	"proc-macro",
	"clone-impls",
] }
quote.workspace = true
proc-macro2.workspace = true
