# Package
[package]
# Derive macros for the Suon MMORPG server (Task, Resource)
name = "suon_macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is
description = "Derive macros for the Suon MMORPG server"

[lib]
proc-macro = true
bench = false

[dependencies]
syn = { workspace = true, features = [
	"derive",
	"parsing",
	"printing",
	"proc-macro",
	"clone-impls",
] }
quote = { workspace = true, features = ["proc-macro"] }
proc-macro2 = { workspace = true, features = ["proc-macro"] }
