# Package
[package]
# Entity movement and grid navigation for the Suon MMORPG framework.
name = "suon_movement"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is.
description = "Entity movement and grid navigation for the Suon MMORPG framework"

[dependencies]
# External crates used directly by this crate.
bevy.workspace = true

# Internal Suon crates used by this crate.
suon_chunk.workspace = true
suon_position.workspace = true
