# Package
[package]
# Networking layer and session management for the Suon MMORPG framework.
name = "suon_network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is.
description = "Networking layer and session management for the Suon MMORPG framework"

[dependencies]
# External crates used directly by this crate.
anyhow.workspace = true
bevy.workspace = true
bytes.workspace = true
crossbeam-channel.workspace = true
humantime.workspace = true
serde.workspace = true
serde_derive.workspace = true
smol.workspace = true
smol-timeout.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
toml = { workspace = true, features = ["serde", "parse", "display"] }

# Internal Suon crates used by this crate.
suon_checksum.workspace = true
suon_position.workspace = true
suon_protocol.workspace = true
suon_protocol_client.workspace = true
suon_protocol_server.workspace = true
suon_serde.workspace = true
suon_xtea.workspace = true
