# Package
[package]
# Server observability and diagnostics for the Suon MMORPG framework.
name = "suon_observability"
version.workspace = true
edition.workspace = true

# Minimum supported Rust version for this crate.
rust-version = "1.85"
authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is.
description = "Server observability and diagnostics for the Suon MMORPG framework"

[dependencies]
# External crates used directly by this crate.
anyhow.workspace = true
bevy.workspace = true
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["parse", "display", "serde"] }
