# Package
[package]
# Binary protocol encoding and decoding for the Suon MMORPG framework.
name = "suon_protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is.
description = "Binary protocol encoding and decoding for the Suon MMORPG framework"

[dependencies]
# External crates used directly by this crate.
bytes.workspace = true
thiserror.workspace = true

# Internal Suon crates used by this crate.
suon_position.workspace = true
