# Package
[package]
# Type-erased resource container for the Suon MMORPG server
name = "suon_resource"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is
description = "Type-erased resource container for the Suon MMORPG server"

[lib]
bench = false

[dev-dependencies]
# Shared third-party dependencies
criterion.workspace = true

[[bench]]
name = "resource"
harness = false
