# Package
[package]
# Deterministic random number helpers for the Suon MMORPG framework.
name = "suon_rng"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is.
description = "Deterministic random number helpers for the Suon MMORPG framework"

[dependencies]
# External crates used directly by this crate.
anyhow.workspace = true
bevy.workspace = true
bevy_rand.workspace = true
log.workspace = true
rand_core.workspace = true
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["parse", "display", "serde"] }

# Internal Suon crates used directly by this crate.
suon_serde.workspace = true
